refactor : 'fields()' is deprecated Remove